# PyAIPersonality

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  README.md  requirements.txt  requirements_dev.txt  setup.py
bindings_zoo/binding_template/: __init__.py  install.py
bindings_zoo/c_transformers/: __init__.py  install.py
bindings_zoo/gpt_4all/: __init__.py  install.py
bindings_zoo/gpt_j_a/: __init__.py  install.py
bindings_zoo/gpt_j_m/: __init__.py  install.py
bindings_zoo/gptq/: __init__.py  install.py
bindings_zoo/llama_cpp_official/: __init__.py  install.py
bindings_zoo/open_ai/: __init__.py  install.py
bindings_zoo/py_llama_cpp/: __init__.py  install.py
configs/: config.yaml  default_config.yaml
cpp/: AIPersonality.cpp  CMakeLists.txt
doc/: text_generation.md
examples/: build_and_personality.py  example_with_pyllamacpp.py  gpt4net.py  gpt4netv0.py  load_personality.py  testing_process_based_model.py
examples/chain_of_thoughts/: chain_of_thoughts.py
examples/client/: index.html
examples/gpt4Art/: gpt4art.py
examples/gpt4Internet/: gpt4netv0.py
examples/gpt4Internetv0/: gpt4netv0.py
examples/gpt4Internetv1/: gpt4netv1.py
examples/gpt4all/: gpt4all.py
examples/langchain_text/: langchain_text.py
examples/lllm_qt_client/: README.md  lllm_qt_client.py  requirements.txt
examples/lllm_web_client/: index.html
examples/render_personality/: app.py
examples/stable_diffusion/: stable_diffusion_agent.py
pyaipersonality/: __init__.py  binding.py  langchain_integration.py  lllm_server.py  server.py
(+572 files in other folders)
